# vinca

./: .drone.yml  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pixi.toml  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  enforce-sha.yml
.scripts/: build_linux.sh  build_osx.sh  build_steps.sh  build_win.bat  run_docker_build.sh
examples/: 2020.03.04.rosinstall  bld_catkin.bat  build_catkin.sh  conda-forge.yaml  conda_build_config.yaml  meta.yaml  packages-ignore.yaml  recipe.yaml  vinca.yaml
examples/patch/: ros-eloquent-rcl-yaml-param-parser.patch  ros-eloquent-ros-workspace.patch  ros-eloquent-rviz-ogre-vendor.patch  ros-eloquent-rviz-rendering.patch  ros-eloquent-rviz2.patch  ros-eloquent-yaml-cpp-vendor.patch  ros-melodic-camera-calibration-parsers.patch  ros-melodic-catkin.patch  ros-melodic-class-loader.patch  ros-melodic-compressed-depth-image-transport.patch  ros-melodic-compressed-image-transport.patch  ros-melodic-costmap-converter.patch  ros-melodic-cv-bridge.patch  ros-melodic-diagnostic-aggregator.patch  ros-melodic-eigenpy.patch  ros-melodic-find-object-2d.patch  ros-melodic-interactive-markers.win.patch  ros-melodic-libfranka.patch  ros-melodic-libg2o.patch  ros-melodic-pcl-ros.patch  ros-melodic-pluginlib.patch  ros-melodic-python-orocos-kdl.patch  ros-melodic-python-qt-binding.patch  ros-melodic-roscpp.osx.patch  ros-melodic-roscpp.patch  ros-melodic-rostime.patch  ros-melodic-rviz.patch  ros-melodic-rviz.win.patch  ros-melodic-sparse-bundle-adjustment.patch  ros-melodic-teb-local-planner.patch  ros-melodic-tf.win.patch  ros-melodic-tf2-py.patch  ros-melodic-tf2-ros.patch  ros-melodic-tf2.patch  ros-melodic-urdfdom.patch  ros-melodic-velodyne-driver.patch  ros-noetic-actionlib-tutorials.patch  ros-noetic-catkin.patch  ros-noetic-cv-bridge.patch  ros-noetic-rviz.patch  (+1 more)
examples/recipes/: ros-melodic-class-loader.yaml  ros-melodic-libfranka.yaml
vinca/: __init__.py  config.py  distro.py  generate_azure.py  generate_dot.py  generate_gha.py  generate_gitlab.py  http.py  license_utils.py  main.py  migrate.py  migration.py  naming.py  pixi_manifest.py  repos.py  resolve.py  snapshot.py  sort_vinca_lists.py  sort_yaml_keys.py  template.py  test_generate_publish_workflows.py  test_license_utils.py  test_naming_scheme.py  test_pixi_manifest.py  test_provenance.py  test_utils.py  test_v1_selectors.py  utils.py  v1_selectors.py
vinca/azure_templates/: emscripten_wasm32.sh  linux.sh  osx_64.sh  osx_arm64.sh  win_build.bat  win_preconfig.bat
vinca/cli/: __init__.py
vinca/templates/: activate.bat.in  activate.sh.in  bld_ament_cmake.bat.in  bld_ament_python.bat.in  bld_catkin.bat.in  bld_catkin_merge.bat.in  bld_cmake.bat.in  bld_colcon_merge.bat.in  bld_python.bat.in  build_ament_cargo.sh.in  build_ament_cmake.sh.in  build_ament_python.sh.in  build_catkin.sh.in  deactivate.bat.in  deactivate.sh.in
vinca/test_fixtures/pixi_manifests/bad_version/: pixi.toml
vinca/test_fixtures/pixi_manifests/message_pkg/: pixi.toml
vinca/test_fixtures/pixi_manifests/minimal/: pixi.toml
vinca/test_fixtures/pixi_manifests/missing_build_type/: pixi.toml
vinca/test_fixtures/pixi_manifests/shared_dep/: pixi.toml
vinca/test_fixtures/pixi_manifests/version_specs/: pixi.toml
vinca/test_fixtures/pixi_manifests/with_deps/: pixi.toml
