[metadata]
name = vinca
version = attr: vinca.__version__
url = https://github.com/seanyen/vinca
project_urls =
    Changelog = https://github.com/seanyen/vinca/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/seanyen/vinca
author = Sean Yen
author_email = zishenyan@gmail.com
maintainer = Sean Yen
maintainer_email = zishenyan@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT Licens
    Programming Language :: Python
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
license = MIT
description = Conda recipe generator for ROS packages.
long_description = file: README.md
keywords = ros

[options]
python_requires = >=3.7
setup_requires = setuptools
install_requires =
  catkin_pkg >=0.4.16
  ruamel.yaml >=0.16.6
  rospkg >=1.2.3
  empy >=3.3.4
packages = find:
zip_safe = false

[options.entry_points]
console_scripts =
    vinca = vinca.main:main

[flake8]
import-order-style = google
