[metadata]
name = vinca
version = attr: vinca.__version__
url = https://github.com/RoboStack/vinca
project_urls =
    Changelog = https://github.com/RoboStack/vinca/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/RoboStack/vinca
author = Sean Yen
author_email = seanyen@microsoft.com
maintainer = Sean Yen
maintainer_email = seanyen@microsoft.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT Licens
    Programming Language :: Python
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
license = MIT
description = Conda recipe generator for ROS packages.
long_description = file: README.md
keywords = ros

[options]
python_requires = >=3.6
setup_requires = setuptools
install_requires =
  catkin_pkg >=0.4.16
  ruamel.yaml >=0.16.6
  rosdistro >=0.8.0
  empy >=3.3.4
  requests >=2.24.0
  networkx >=2.5
packages = find:
zip_safe = false

[options.entry_points]
console_scripts =
    vinca = vinca.main:main
    vinca-glab = vinca.generate_gitlab:main
    vinca-azure = vinca.generate_azure:main
    vinca-dot = vinca.generate_dot:main

[flake8]
import-order-style = google
